<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- @string/hello_world its a refrence from folder string.xml -->
    <!-- android:textsizechosing size on the screen -->
    <!-- layout_gravity -->
    <!-- android:id is for refrence in java application -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/hello_world"
        android:textSize="45dp"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/bAdd"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/Add"
        android:textSize="25dp" />

    <Button
        android:id="@+id/bSub"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:text="@string/Sub"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/bSub"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/name"
        android:textSize="18dp"
        tools:context=".MainActivity" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="100"
        android:hint="@string/userapper"
        android:inputType="textNoSuggestions" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_OK"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bSub"
        android:layout_below="@+id/txt_username"
        android:layout_marginTop="20dp"
        android:text="@string/Click_Enter"
        android:textSize="25dp" />

</RelativeLayout>
